separate the getDefaultFileSystem code into a util function

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<script src="./terminal.js"></script>
+<script src="./terminal.js" type="module"></script>
 <style>
-    body{
-        margin: 0;
-        padding: 0;
-    }
+  body {
+    margin: 0;
+    padding: 0;
+  }
 </style>
 <terminal-emulator></terminal-emulator>
